# homo-socialis

./: CITATION.cff  Discussion.txt  README.md  graphs.py  main.py  pyproject.toml  simulation.py  stats.py
