[tool.poetry]
name = "homo-socialis"
version = "0.1.0"
description = ""
authors = ["Gottschali <aligottschall@protonmail.com>"]
readme = "README.md"
packages = [{include = "homo_socialis"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
networkx = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
